netpol.allow-from-namespace-list.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-namespace-list
  namespace: dbzm-prod
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network.openshift.io/policy-group: ingress
      - namespaceSelector:
          matchLabels:
            name: drbs-common
      - namespaceSelector:
          matchLabels:
            name: openshift-user-workload-monitoring
